[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymirror"
authors = [{name = "Alyetama", email = "56323389+Alyetama@users.noreply.github.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Alyetama/pymirror"

[project.scripts]
pymirror = "pymirror.cli:main"
