[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymirror"
authors = [{ name = "Alyetama", email = "56323389+Alyetama@users.noreply.github.com" }]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "rich>=9.1.0",
    "selenium>=3.141.0",
    "webdriver_manager>=3.4.2",
    "dracula>=0.1.2",
    "loguru>=0.5.3",
    "psutil>=5.8.0"
]

[project.urls]
Home = "https://github.com/Alyetama/pymirror"

[project.scripts]
pymirror = "pymirror.run:main"
