[tool.poetry]
name = "pymirror"
version = "0.4.2"
description = "Upload files to Multiple Mirror"
authors = ["Mohammad Alyetama <malyetama@pm.me>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dracula = ">=0.1.3"
loguru = ">=0.5.3"
selenium = ">=4.1.0"
webdriver-manager = ">=3.5.2"
psutil = ">=5.8.0"
rich = ">=10.13.0"
requests = ">=2.28.0"
speedtest = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pymirror = "pymirror.run:main"
